--- a/vue-basico/index.html
+++ b/vue-basico/index.html
@@ -1,8 +1,6 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-   
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   </head>
   <body>
     <div id="app">
@@ -26,6 +24,7 @@
         </todo-item>
       </ol>
     </div>
-    <script src="/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
