--- a/vue-basico/index.html
+++ b/vue-basico/index.html
@@ -12,6 +12,7 @@
     </div>
     <div id="app1">
       <p>{{ message }}</p>
+      <p>hola gato</p>
       
       <input v-model="message" />
     </div>
